# ClickHouse

programs/: CMakeLists.txt  main.cpp
programs/poc/: CMakeLists.txt  Poc.cpp  clickhouse-poc.cpp
